added constructors to letter.js and added global vars and title to index.js

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Henryhankdc/hangman-cli-game#readme",
   "dependencies": {
+    "clear": "0.0.1",
     "inquirer": "^5.1.0"
   }
 }
